fix(wizard): highcontrast style for BE only options (#7544)

--- a/app/react/portainer/environments/wizard/components/Option/Option.module.css
+++ b/app/react/portainer/environments/wizard/components/Option/Option.module.css
@@ -3,6 +3,7 @@
   @apply border border-solid;
   @apply bg-gray-2 border-gray-5 text-black;
   @apply th-dark:bg-gray-iron-10 th-dark:border-gray-neutral-8 th-dark:text-white;
+  @apply th-highcontrast:bg-gray-iron-10 th-highcontrast:border-gray-neutral-8 th-highcontrast:text-white;
 
   display: block;
   width: 200px;
